Per request of deb@, put the "Donate to FreeBSD" button in the default page header.  The following changes were made:
 - Remove the Donate to FreeBSD button added a few days ago

 - Add stylesheet entries for the new button.  Note this
   button is pure CSS, and does not use background images
   for the rounded boarders.

 - Move the 'Donate' and 'Contact' links from the header:
    o 'Donate' is now 'Hardware Donations' in the menu
       dropdown.
    o 'Contact' is now in the footer.
    o The 'Donate' link that existed in the menu dropdown
      is now 'Monetary Donations'.

 - The header2.donatebutton entity is now used for this
   button, so translation teams can modify localized
   header.l10n.ent for the button text.

 - Comment the header2.searchnav entity entries in header.ent
   for now, until I figure out what to do with them.

This change should have zero UI regressions, and solves the
problem of the previously added button pushing the 'New to
FreeBSD' button down into the security text.[1]

Requested by:	deb
Reported by:	emaste[1], gavin[1]


git-svn-id: https://svn.freebsd.org/doc/head@40361 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/htdocs/layout/css/layout.css
+++ b/en_US.ISO8859-1/htdocs/layout/css/layout.css
@@ -409,6 +409,43 @@
   width: 150px;
 }
 
+/* Donate Button */
+ /* height and width details */
+.frontdonatetop div, .frontdonatetop, .frontdonatebot div, .frontdonatebot {
+  width: 20%;
+  height: 10px;
+  font-size: 1px;
+  text-align: center;
+}
+
+.frontdonatecontent {
+  margin: 0;
+  padding: 0;
+  margin-top: -4px;
+  margin-bottom: -4px;
+  text-align: center;
+  font-size: 1.1em;
+  font-weight: bold;
+}
+
+.frontdonatecontent a, .frontdonatecontent a:link, .frontdonatecontent a:visited, .frontdonatecontent a:hover, .frontdonatecontent a:active {
+  color: #990000;
+  text-decoration: none;
+}
+
+.frontdonateroundbox {
+  margin-top: 10px;
+  padding: 0;
+  /*padding-right: 30px;*/
+  width: 150px;
+  height: 25px;
+  background-color: white;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -khtml-border-radius: 10px;
+  border-radius: 10px;
+}
+
 /* Get FreeBSD Box */
 
  /* set background images for corners */
