Add "overflow: auto;" to CSS.  With Firefox and other browsers, this puts a scrollbar on programlisting and screen elements that have lines too long to fit on the screen.  The previous version just wrapped these long lines with no indication.  Proposed on the -doc mailing list in August, no public objections, discussed with gabor@ who may have an alternate method.  In the meantime, this is better than what we had.
git-svn-id: https://svn.freebsd.org/doc/head@43345 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -238,6 +238,7 @@ html {
 
 pre.screen {
 	white-space: pre;
+	overflow: auto;
 	font-family: monospace;
 	padding: 1ex;
 	background-color: #edc;
@@ -248,6 +249,7 @@ pre.screen {
 
 pre.programlisting {
 	white-space: pre;
+	overflow: auto;
 	font-family: monospace;
 	padding: 1ex;
 	background-color: #eee;
