Show port names in monospace italic.
git-svn-id: https://svn.freebsd.org/doc/head@43452 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -216,6 +216,11 @@ html {
 	color: #007a00;
 }
 
+.package, .port {
+  font-family: monospace;
+  font-style: italic;
+}
+
 .svnref {
 	color: #007a00;
 }
