- Render terms as bold and add some top margin to avoid sticking it to   tables in the previous definition
PR:		docs/181121
Submitted by:	Ken Reed <kreed002@gmail.com>


git-svn-id: https://svn.freebsd.org/doc/head@43624 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -124,6 +124,11 @@ dl {
 	line-height: 1.2;
 }
 
+dt {
+	font-weight: bold;
+	margin-top: 1em;
+}
+
 div.calloutlist dt {
 	float: left;
 	width: 1em;
