- Make the admonition boxes consistent
Reported by:	wblock


git-svn-id: https://svn.freebsd.org/doc/head@43626 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -289,42 +289,41 @@ pre.programlisting {
 	color: #222;
 	background: #eee;
 	border: 1px solid #ccc;
-	width: 90%;
+	width: 63em;
 }
 
 .tip {
 	color: #004F00;
 	background: #d8ecd6;
 	border: 1px solid green;
-	width: 90%;
+	width: 63em;
 }
 
 .important {
 	font-style:italic;
 	border: 1px solid #a00;
-	border-left: 12px solid #c00;
+	border-left: 1em solid #c00;
+	width: 62em;
 }
 
 .warning {
 	color: #9F1313;
 	background: #f8e8e8;
 	border: 1px solid #e59595;
-	width: 90%;
+	width: 63em;
 }
 
 .caution {
 	color: #3E3535;
 	background: #FFC;
 	border: 1px solid #e59595;
-	width: 90%;
+	width: 63em;
 }
 
 .example {
 	background: #fefde6;
 	border: 1px solid #f1bb16;
-	margin: 1em 0;
-	padding: 0.2em 2em;
-	width: 90%;
+	width: 63em;
 }
 
 .admontitle {
