- Reduce bottom padding in admonition boxes
Reported by:	wblock


git-svn-id: https://svn.freebsd.org/doc/head@43627 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -280,7 +280,7 @@ pre.programlisting {
 
 .note, .tip, .important, .warning, .caution, .example, div.procedure {
 	border-radius: 6px;
-	padding: 2ex 2ex;
+	padding: 2ex 2ex 0 2ex;
 	margin: .75em 3em .75em 1em;
         line-height: 1.3;
 }
