Improve the spacing of callout lists.  Thanks to Allan Jude for his help.
git-svn-id: https://svn.freebsd.org/doc/head@43791 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -139,6 +139,17 @@ div.calloutlist dd {
 	margin-bottom: 1ex;
 }
 
+body .calloutlist td {
+	padding-right: 0.5em;
+	width: auto;
+}
+
+body .calloutlist td p {
+	line-height: 1.2;
+	margin-top: 4px;
+	margin-bottom: 4px;
+}
+
 body form {
 	margin: .6em 0;
 }
