Improve XHTML table of contents readability by reducing vertical spacing and using slightly larger fonts for headings.
PR:		docs/186858
Submitted by:	Allan Jude <freebsd@allanjude.com>


git-svn-id: https://svn.freebsd.org/doc/head@44049 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -120,19 +120,26 @@ body div {
 }
 
 dl {
-	margin: .8em 0;
+	margin: .4em 0 0 0;
 	line-height: 1.2;
 }
 
 dt {
 	font-weight: bold;
-	margin-top: 1em;
+	margin: 0.4em 0 0 0;
+}
+
+div.abstract div.abstract-title,
+div.toc div.toc-title,
+div.list-of-figures div.toc-title,
+div.list-of-tables div.toc-title,
+div.list-of-examples div.toc-title {
+	font-size: 115%;
 }
 
 div.calloutlist dt {
 	float: left;
-	width: 1em;
-}
+	width: 1em;}
 
 div.calloutlist dd {
 	clear: right;
