- Add line number indicators to programlisting and screen in the HTML   version. This makes linewrap indicators unnecessary since the   line numbers suggest where the line is wrapped.
No objection from:	doc


git-svn-id: https://svn.freebsd.org/doc/head@44109 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -265,26 +265,47 @@ html {
 	text-decoration: underline;
 }
 
-pre.screen {
-	white-space: pre;
-	overflow: auto;
+.screen {
+	white-space: pre-wrap;
 	font-family: monospace;
 	padding: 1ex;
 	background-color: #edc;
-	border: 1px solid #ccc;
+	border-style: solid;
+	border-color: #EEB985;
+	border-width: 0 0 0 24px;
 	border-radius: 6px;
 	line-height: 1.1;
+	counter-reset: code;
 }
 
-pre.programlisting {
-	white-space: pre;
-	overflow: auto;
+.programlisting {
+	white-space: pre-wrap;
 	font-family: monospace;
 	padding: 1ex;
 	background-color: #eee;
-	border: 1px solid #ccc;
+	border-style: solid;
+	border-color: #BABABA;
+	border-width: 0 0 0 24px;
 	border-radius: 6px;
 	line-height: 1.1;
+	counter-reset: code;
+}
+
+span.verbatim {
+	counter-increment: code;
+	display: block;
+	padding: 0 13px 0 29px;
+	position: relative;
+	margin: 0 -8px 0 -24px;
+	overflow: hidden;
+}
+
+span.verbatim:before {
+	width: 24px;
+	text-align: right;
+	content: counter(code) " ";
+	position: absolute;
+	left: -10px;
 }
 
 @media screen {  /* hide from IE3 */
@@ -378,7 +399,7 @@ pre.programlisting {
 	font-weight: bold;
 }
 
-pre.screen strong {
+.screen strong {
 	font-weight: normal;
 }
 
