Fix the display of line numbers in screen and programlisting elements. Later version of the patch supplied by Allan Jude <freebsd@allanjude.com>.
PR:		docs/187733
Submitted by:	Dru Lavigne <dru@freebsd.org>


git-svn-id: https://svn.freebsd.org/doc/head@44293 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -272,7 +272,7 @@ html {
 	background-color: #edc;
 	border-style: solid;
 	border-color: #EEB985;
-	border-width: 0 0 0 24px;
+	border-width: 0 0 0 2.5em;
 	border-radius: 6px;
 	counter-reset: code;
 }
@@ -284,7 +284,7 @@ html {
 	background-color: #eee;
 	border-style: solid;
 	border-color: #BABABA;
-	border-width: 0 0 0 24px;
+	border-width: 0 0 0 2.5em;
 	border-radius: 6px;
 	counter-reset: code;
 }
@@ -292,18 +292,19 @@ html {
 span.verbatim {
 	counter-increment: code;
 	display: block;
-	padding: 0 13px 0 29px;
+	padding: 0 0.5em 0 3.75em;
 	position: relative;
-	margin: 0 -8px 0 -24px;
+	margin: 0 -0.3em 0 -3.85em;
 	overflow: hidden;
 }
 
 span.verbatim:before {
-	width: 24px;
+	width: 3em;
 	text-align: right;
-	content: counter(code) " ";
+	content: counter(code);
 	position: absolute;
-	left: -10px;
+	left: 0;
+	color: #404040;
 }
 
 @media screen {  /* hide from IE3 */
