--- a/share/misc/docbook.css
+++ b/share/misc/docbook.css
@@ -34,6 +34,16 @@
   font-weight: bold;
 }
 
+a:link {
+	color:#0645AD;
+	text-decoration: underline;
+}
+
+a:visited, a:hover, a:active {
+	color:#663366;
+	text-decoration: underline;
+}
+
 div.blockquote-title {
   font-weight: bold;
   margin-top: 1em;
