--- a/en_US.ISO8859-1/htdocs/releases/9.3R/docbook.css
+++ b/en_US.ISO8859-1/htdocs/releases/9.3R/docbook.css
@@ -206,3 +206,8 @@ BLOCKQUOTE.WARNING {
         padding-left: 1em;
         padding-right: 1em;
 }
+
+span.contrib {
+	font-size: small;
+	font-style: italic;
+}
